--- a/Web/LearningEnglishWeb/Views/Shared/_Layout.cshtml
+++ b/Web/LearningEnglishWeb/Views/Shared/_Layout.cshtml
@@ -25,28 +25,29 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LearnEnglish</a>
+                <a class="navbar-brand" asp-route-area="" asp-area="" asp-controller="Home" asp-action="Index">LearnEnglish</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
+                    @using LearningEnglishWeb.Extensions
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
+                        <li class="nav-item @Html.IsActive(controller: "Home")">
+                            <a class="nav-link" asp-route-area="" asp-controller="Home" asp-action="Index">Главная</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Training" asp-action="Index">Тренировки</a>
+                        <li class="nav-item @Html.IsActive(controller: "Training")">
+                            <a class="nav-link" asp-route-area="Training" asp-controller="Training" asp-action="Index">Тренировки</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vocabulary" asp-action="Index" asp-route-id="">Словарь</a>
+                        <li class="nav-item @Html.IsActive(controller: "Vocabulary")">
+                            <a class="nav-link" asp-route-area="" asp-controller="Vocabulary" asp-action="Index" asp-route-id="">Словарь</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="WordSet" asp-action="Index" asp-route-id="">Наборы слов</a>
+                        <li class="nav-item @Html.IsActive(controller: "WordSet")">
+                            <a class="nav-link" asp-route-area="" asp-controller="WordSet" asp-action="Index" asp-route-id="">Наборы слов</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Administrator" asp-action="Index">Администрирование</a>
+                        <li class="nav-item @Html.IsActive(controller: "Administrator")">
+                            <a class="nav-link" asp-route-area="" asp-controller="Administrator" asp-action="Index">Администрирование</a>
                         </li>
                     </ul>
                 </div>
