--- a/Web/LearningEnglishWeb/Views/WordSet/Index.cshtml
+++ b/Web/LearningEnglishWeb/Views/WordSet/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="card" >
                 <img src="@wordSet.ImageSrc" class="card-img-top" style="height: 12rem" />
                 <div class="card-body">
-                    <p class="card-title"> @wordSet.Title </p>
+                    <h4 class="card-title"> @wordSet.Title </h4>
                     <p class="card-text"> Количество слов - @wordSet.WordsCount </p>                    
                 </div>
                 <div class="card-footer text-right">
